# oILAB

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  _best_rational_approximation_8h.html  _best_rational_approximation_8h.js  _best_rational_approximation_8h_source.html  _bi_crystal_8cpp.html  _bi_crystal_8cpp.js  _bi_crystal_8cpp_source.html  _bi_crystal_8h.html  _bi_crystal_8h.js  _bi_crystal_8h_source.html  _bi_crystal_bindings_8h.html  _bi_crystal_bindings_8h.js  _bi_crystal_bindings_8h_source.html  _bicrystal_actor_8cpp.html  _bicrystal_actor_8cpp.js  _bicrystal_actor_8cpp_source.html  _bicrystal_actor_8h.html  _bicrystal_actor_8h.js  _bicrystal_actor_8h_source.html  _canonical_t_p_8h.html  _canonical_t_p_8h.js  _canonical_t_p_8h_source.html  _canonical_t_p_implementation_8h.html  _canonical_t_p_implementation_8h_source.html  _diophantine_solver_8h.html  _diophantine_solver_8h.js  _diophantine_solver_8h_source.html  _dislocation_dipole_8h.html  _dislocation_dipole_8h.js  _dislocation_dipole_8h_source.html  _dislocations_8h.html  _dislocations_8h.js  _dislocations_8h_source.html  _ensemble_8h.html  _ensemble_8h.js  (+540 more)
.github/workflows/: deploy-docs.yml  main.yml
bindings/: CMakeLists.txt  example.py  module.cpp
cmake/: oILABConfig.cmake.in
doxygen/: Doxyfile
examples/: CMakeLists.txt
examples/bg/: CMakeLists.txt  Mayer.h  bg.cpp
examples/bicrystal/: CMakeLists.txt  Grimmer1985.txt  bicrystal_2d.txt  main.cpp
examples/graphene/: CMakeLists.txt  kurokawa.txt
include/Bindings/: BiCrystalBindings.h  LatticeBindings.h  LatticeDirectionBindings.h  LatticeVectorBindings.h  PyLatticeModule.h  ReciprocalLatticeDirectionBindings.h  ReciprocalLatticeVectorBindings.h
include/IO/: Lammps.h  TerminalColors.h  TextFileParser.h
include/Lattices/: BiCrystal.h  ComplexOperator.h  Diff.h  DislocationDipole.h  Dislocations.h  Function.h  Gb.h  GbContinuum.h  GbContinuumImplementation.h  GbMaterialTensors.h  GbMesoState.h  GbMesoStateEnsemble.h  GbMesoStateEnsembleImplementation.h  GbMesoStateImplementation.h  GbShifts.h  IntegerLattice.h  LLL.h  Laplacian.h  Lattice.h  LatticeCore.h  LatticeDirection.h  LatticeFunction.cpp  LatticeFunction.h  LatticeFunctionImplementation.h  MesoState.h  (+17 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+88 more)
src/: CMakeLists.txt
src/Bindings/: Lattice_bindings.cpp  example.py  module.cpp  pyoilab.pyi
src/Lattices/: BiCrystal.cpp  CMakeLists.txt  DislocationDipole.cpp  Dislocations.cpp  Farey.cpp  Gb.cpp  GbContinuum.cpp  GbMaterialTensors.cpp  GbMesoState.cpp  GbMesoStateEnsemble.cpp  GbShifts.cpp  LLL.cpp  Lattice.cpp  LatticeCore.cpp  LatticeDirection.cpp  LatticeVector.cpp  MesoState.cpp  MesoStateEnsemble.cpp  RLLL.cpp  RationalLatticeDirection.cpp  RationalMatrix.cpp  RationalReciprocalLatticeDirection.cpp  ReciprocalLatticeDirection.cpp  ReciprocalLatticeVector.cpp  ReferenceState.cpp
src/Math/: Farey.cpp  LLL.cpp  RLLL.cpp  RationalMatrix.cpp
src/MonteCarlo/: CanonicalTP.cpp  EvolutionAlgorithm.cpp  LandauWangTP.cpp  MonteCarlo.cpp
src/Visualization/: BicrystalActor.cpp  CMakeLists.txt  oiViewerMainWindow.cpp  oiViewerVTKwidget.cpp
tests/: CMakeLists.txt
tests/bicrystal/: CMakeLists.txt  Grimmer1985.txt  bycrystal_2d.txt  bycrystal_3d.txt  main.cpp
tests/old/testMonteCarlo/: bicrystal_3d.txt  testMonteCarlo.cpp
tests/testBG/: CMakeLists.txt
tests/testBezout/: CMakeLists.txt  testBezout.cpp
tests/testCCUM/: CMakeLists.txt  testCCUM.cpp
tests/testCoincidentRotations/: CMakeLists.txt  testCoincidentRotations.cpp
tests/testComplexOperator/: CMakeLists.txt  complexMatrix.m  complexMatrix.m~  evalues.txt  testComplexOperator.cpp
tests/testDiff/: CMakeLists.txt  testDiff.cpp
tests/testEVP/: CMakeLists.txt  testEVP.cpp
tests/testFFT/: CMakeLists.txt  fft3.m  fft_m3D.txt  m2D.txt  m3D.txt  matlab_workspace.mat  testFFT.cpp
tests/testGB3d/: CMakeLists.txt  testGb3d.cpp
tests/testGb/: CMakeLists.txt  testGb.cpp
tests/testGbMesoState/: CMakeLists.txt  lammps.py  testGbMesoState.cpp
tests/testGbShifts/: CMakeLists.txt  bicrystal_3d.txt  testGbShifts.cpp
tests/testGenerateGBs/: CMakeLists.txt  testGenerateGBs.cpp
tests/testGraphene/: CMakeLists.txt  bandStructure.txt  bandStructure12_corrected.txt  bandStructure24.txt  bandStructure_meyer_12_12_36.txt  bandStructurexx.txt  testGraphene.cpp
tests/testKP/: CMakeLists.txt  KP.h  testKP.cpp
tests/testLandauWang/: CMakeLists.txt  lammps.py  testLandauWang.cpp  testMonteCarlo.cpp
tests/testLandauWang2D/: CMakeLists.txt  bicrystal_3d.txt  lammps.py  testLandauWang2D.cpp
tests/testLaplacian/: CMakeLists.txt  testLaplacian.cpp
tests/testLattice/: CMakeLists.txt  testLattice.cpp
tests/testMesoStates/: CMakeLists.txt  bicrystal_3d.txt  testMesoStates.cpp
tests/testMoire/: CMakeLists.txt  testMoire.cpp
tests/testMonteCarlo/: CMakeLists.txt  lammps.py  testMonteCarlo.cpp
tests/testOperator/: CMakeLists.txt  testOperator.cpp
tests/testPeriodicFunction/: CMakeLists.txt  Mayer.h  kurokawa_full.txt  testPeriodicFunction.cpp
tests/testPerpendicularDirections/: CMakeLists.txt  testPerpendicularDirections.cpp
tests/testPlaneParallelLatticeDirections/: CMakeLists.txt  testPlaneParallelLatticeDirections.cpp
tests/testSNF/: CMakeLists.txt  testSNF.cpp
tests/testSNF_cubic/: CMakeLists.txt  testSNF_cubic.cpp
tests/testSchrodinger3/: CMakeLists.txt  bandStructure18.txt  bandStructure_meyer_12_12_12.txt  bandStructure_meyer_12_12_36_correctedPotential.txt  meyer.txt  testSchrodinger3.cpp
tests/testSpectra/: CMakeLists.txt  testSpectra.cpp
tools/oiViewer/: CMakeLists.txt  oiViewer.cxx
userExamples/: CMakeLists.txt
(+41 files in other folders)
