add_library(oILAB SHARED    BiCrystal.cpp
                            Gb.cpp
                            Lattice.cpp 
                            LatticeVector.cpp
                            RationalMatrix.cpp 
                            LatticeCore.cpp
                            RLLL.cpp
                            ReciprocalLatticeDirection.cpp 
                            LLL.cpp                        
                            LatticeDirection.cpp
                            RationalLatticeDirection.cpp
                            RationalReciprocalLatticeDirection.cpp
                            ReciprocalLatticeVector.cpp
                            Farey.cpp)

